<resources>
    <string name="app_name">Standalone app 1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="first_name">Enter your first name</string>
    <string name="middle_name">Enter your middle name</string>
    <string name="last_name">Enter your last name</string>
    <string name="submit">Submit</string>
    <string name="img_description">Profile Picture thumbnail</string>
    <string name="camera">Take a profile picture</string>
</resources>